# eqtools

./: .gitignore  Cargo.toml  README.md  requirements.txt
configs/: Aaden_oakwynd_PAL_desktop.ini  UI_Landias_oakwynd.ini  UI_Layarie_oakwynd.ini  UI_Layarie_oakwynd_desktop.ini  UI_Maneril_oakwynd_desktop.ini  UI_Mcbowie_oakwynd.ini  drakar_UI_Example_Servername_mac.ini
configs/bard/: Karenchord_oakwynd_BRD_k8s_master_2.ini  UI_Karenchord_oakwynd_BRD_k8s_master_2.ini
configs/character/: Aaden_oakwynd_PAL_mac.ini  Landias_oakwynd_mac.ini  Phacetank_oakwynd_SHD_mac.ini  UI_Landias_oakwynd_mac.ini
configs/cleric/: Hazheals_oakwynd_CLR_k8s_node_1.ini  UI_Hazheals_oakwynd_CLR_k8s_node_1.ini
configs/druid/: Landias_oakwynd_DRU_desktop.ini  Landias_oakwynd_DRU_k8s_master_1.ini  Landias_oakwynd_DRU_mac.ini  Reim_luclin_DRU_k8s_master_2.ini  Reim_luclin_DRU_mac.ini  UI_Landias_oakwynd_DRU_desktop.ini  UI_Landias_oakwynd_DRU_k8s_master_1.ini  UI_Landias_oakwynd_DRU_mac.ini  UI_Landias_oakwynd_desktop.ini  UI_Reim_luclin_DRU_k8s_master_2.ini  UI_Reim_luclin_DRU_mac.ini
configs/monk/: Monkees_oakwynd_MNK_mac.ini  UI_Monkees_oakwynd_MNK_mac.ini
configs/paladin/: Aaden_oakwynd_PAL_mac.ini  Demidar_luclin_PAL_mac.ini  UI_Aaden_oakwynd_PAL_desktop.ini  UI_Aaden_oakwynd_PAL_mac.ini  UI_Demidar_luclin_PAL_mac.ini
configs/ranger/: Mcbowie_oakwynd_RNG_k8s_node_2.ini  UI_Mcbowie_oakwynd_RNG_k8s_node_2.ini  UI_Mcbowie_oakwynd_desktop.ini
configs/shadowknight/: Phacetank_oakwynd_SHD_desktop.ini  Phacetank_oakwynd_SHD_mac.ini  UI_Phacetank_oakwynd_SHD_desktop.ini  UI_Phacetank_oakwynd_SHD_mac.ini
configs/shaman/: Shamizzle_oakwynd_SHM_mac.ini  UI_Shamizzle_oakwynd_SHM_desktop.ini  UI_Shamizzle_oakwynd_SHM_mac.ini
configs/stream_deck/: EverQuest Druid.streamDeckProfile
docs/: README.md  ROADMAP.md
docs/bard/: info.md
docs/design/: logic.md
docs/leveling/: pl_zone_progression.md
docs/monk/: info.md
docs/paladin/: info.md  paladin_spells.html
resources/: test_eqlog.txt  test_eqlog_simple.txt
resources/example_logs/: eqlog_Shamizzle_oakwynd-desktop-01.txt  eqlog_Shamizzle_oakwynd.txt
scripts/: list-eq-files.sh  process_ui_images.py  test_tcp_client.py
src/: main.rs
src/events/: keyboard.rs
src/logger/: main.rs  mod.rs
src/macros/: mod.rs  social.rs
src/parser/: mod.rs
src/sandbox/: mod.rs
src/server/: main.rs  mod.rs  p2p.rs  serve.rs
(+10 files in other folders)
