[package]
name = "eqtools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive", "debug"] }
rdev = "0.5.3"
tokio = { version = "1.33.0", features = ["full"] }

[[bin]]
name = "eqtools"
path = "src/main.rs"

[[bin]]
name = "eqt-server"
path = "src/server/main.rs"

[[bin]]
name = "eqt-client"
path = "src/client/main.rs"
