[package]
name = "eqtools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "eqtools"
path = "src/main.rs"

[[bin]]
name = "eqt-server"
path = "src/server/main.rs"

[[bin]]
name = "eqt-client"
path = "src/client/main.rs"

[dependencies]
async-std = { version = "1.12", features = ["attributes"] }
async-trait = "0.1"
clap = { version = "4.4.7", features = ["derive", "debug"] }
futures = "0.3.29"
libp2p = { version = "0.53.1", features = [ "async-std", "dns", "gossipsub", "identify", "macros", "mdns", "noise", "ping", "quic", "relay", "rendezvous", "tcp", "tokio", "tokio", "yamux"] }
rdev = "0.5.3"
tokio = { version = "1.34", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
